SERVER-16275 MMAPv1 does not report when capped is false in colstats